got a start on scripting

--- a/index.html
+++ b/index.html
@@ -18,7 +18,9 @@
       <li>final guess prints here?</li>
     </ul>
     <h3>Remaining guesses message goes here</h3>
-    <input type="text" id="guess-box" maxlength="3"/><button>Submit Guess
-        </button><button>Play Again</button><button id="hint">Hint</button>
+    <input type="text" id="guess-box" placeholder="1-100" maxlength="3" />
+    <button>Submit Guess</button>
+    <button>Play Again</button>
+    <button id="hint">Hint</button>
   </body>
 </html>
