got the lower/higher messages working: now want the previous guesses label to only appear after the first guess

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <li id="guess3"></li>
       <li id="guess4"></li>
     </ul>
-    <h3 id="msg-bar">Enter a number and press "submit guess."</h3>
+    <h3 id="msg-bar"></h3>
 
     <input type="text" id="guess-box" placeholder="1-100" maxlength="3" />
     <button id="submit-button" type="button">Submit Guess</button>
