got the header to only appear after first guess and added hover colors to buttons

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <body>
     <h1>Guessing Game</h1>
 
-    <h3>Previous Guesses:</h3>
+    <h3 id="previous-guesses">Previous Guesses:</h3>
     <ul>
       <li id="guess1"></li>
       <li id="guess2"></li>
